syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "common_message.proto";

option go_package = "blog/server/pb";

message Post {
    int64 id = 1;
    string title = 2;
    string abstract = 3;
    string cover_image = 4;
    string content = 5;
    repeated Category categories = 6;
    repeated Tag tags = 7;
    bool is_featured = 8;
    string status = 9;
}

message CreatePostRequest {
    string title = 1;
    string abstract = 2;
    string cover_image = 3;
    string content = 4;
    repeated int64 category_ids = 5;
    repeated string tag_names = 6;
}
message CreatePostResponse {
    Post post = 1;
}

message DeletePostsRequest {
    repeated int64 post_ids = 1;
}

message UpdatePostRequest {
    message Post {
        int64 id = 1;
        string title = 2;
        string abstract = 3;
        string cover_image = 4;
        string content = 5;
        repeated int64 category_ids = 6;
        repeated string tag_names = 7;
    }
    Post post = 1;
    google.protobuf.FieldMask update_mask = 2;
}
message UpdatePostResponse {
    Post post = 1;
}

message ListPostsRequest {
    int32 page_id = 1;
    int32 page_size = 2;
    string order = 3;
    string order_by = 4;
    string status = 5;
    string keyword = 6;
}
message ListPostsResponse {
    message PostItem {
        int64 id = 1;
        string title = 2;
        string status = 3;
        int64 view_count = 4;
        google.protobuf.Timestamp update_at = 5;
        google.protobuf.Timestamp publish_at = 6;
    }
    int64 total = 1;
    repeated PostItem posts = 2;
}

message SubmitPostRequest {
    repeated int64 post_ids = 1;
}

message ReviewPostRequest {
    int64 post_id = 1;
}
message ReviewPostResponse {
    Post post = 1;
}

message PublishPostRequest {
    repeated int64 post_ids = 1;
}

message WithdrawPostRequest {
    repeated int64 post_ids = 1;
}

message ChangePostRequest {
    message Post {
        int64 id = 1;
        repeated int64 category_ids = 2;
        bool is_featured = 3;
    }
    Post post = 1;
    google.protobuf.FieldMask update_mask = 2;
}

message GetPostsRequest {
    int32 page_id = 1;
    int32 page_size = 2;
    string order = 3;
    string order_by = 4;
    string status = 5;
    string keyword = 6;
}
message GetPostsResponse {
    message PostItem {
        int64 id = 1;
        string title = 2;
        User author = 3;
        repeated Category categories = 4;
        string status = 5;
        bool is_featured = 6;
        int64 view_count = 7;
        google.protobuf.Timestamp update_at = 8;
        google.protobuf.Timestamp publish_at = 9;
    }
    int64 total = 1;
    repeated PostItem posts = 2;
}

message StarPostRequest {
    int64 post_id = 1;
    bool isLike = 2;
}

message FetchPostsRequest {
    int32 page_id = 1;
    int32 page_size = 2;
    string order = 3;
    string order_by = 4;
    bool is_featured = 5;
    int64 author_id = 6;
    int64 category_id = 7;
    int64 tag_id = 8;
    string keyword = 9;
}
message FetchPostsResponse {
    message PostItem {
        int64 id = 1;
        string title = 2;
        UserInfo author = 3;
        string abstract = 4;
        string cover_image = 5;
        repeated Tag tags = 6;
        int64 view_count = 7;
        int64 star_count = 8;
        int64 comment_count = 9;
        google.protobuf.Timestamp publish_at = 10;
    }
    int64 total = 1;
    repeated PostItem posts = 2;
}

message ReadPostRequest {
    int64 post_id = 1;
}
message ReadPostResponse {
    message Post {
        int64 id = 1;
        string title = 2;
        UserInfo author = 3;
        string cover_image = 4;
        string content = 5;
        repeated Category categories = 6;
        repeated Tag tags = 7;
        int64 view_count = 8;
        int64 star_count = 9;
        google.protobuf.Timestamp publish_at = 10;
    }
    Post post = 1;
}
